--- a/app5K/__alps/app/style/app_default_design.scss
+++ b/app5K/__alps/app/style/app_default_design.scss
@@ -95,7 +95,7 @@ body {
     pre {
         background-color: $color-bg-alt;
         display: block;
-        padding: 1em;
+        padding: 1.2rem 2.4rem;
         overflow-x: auto;
     }
     @media ($screenForTablet) {
