--- a/app5K/__alps/app/style/app_interface.scss
+++ b/app5K/__alps/app/style/app_interface.scss
@@ -216,5 +216,12 @@ $grid_formula--full__page:
     @extend %grid_layout--page;
 }
 
+/* ------------------------------------ pending */
+
+/* todo */
+// boxmodel--xy/y--centered
 
 
+
+
+/* ------------------------------------ eof interface */
